# resource-tools

./: .gitignore  README.md  command_substitution  first_script  for_loops.sh  get_extensions.sh  if_combine.sh  if_project.sh  read_while.sh  special_calculator  while.sh
architecture-diagrams/: Makefile  etl-08-05.py  event-lambda-diagrams-1.py  readme.md  requirements.txt
cka-prep/helm/: steps.md
cka-prep/hpa/: notes.md  php-apache.yaml
cka-prep/ingress/: ingress-nb.yaml  notes.md
cka-prep/objects/: clusterip-service.yaml  daemonset.yaml  deploy-nginx.yaml  lb-service.yaml  np-service.yaml  role.yaml  sa-pod.yaml  volume-pod.yaml
ckd-prep/: ckad.md  ingress.md  network-policy.yaml
ckd-prep/config-maps/: application.txt  cm.yaml
ckd-prep/demo-nodeport/: ingress.yaml  np-svc.yaml  staeful-set.yaml
ckd-prep/exercise/: nginx-deploy.yaml
ckd-prep/labs/: .nginx-pv.yaml.swp
ckd-prep/nginx/: ingress-controller-svc.yaml  ingress.yaml
ckd-prep/practice/: p-controller.yaml  p-deploy.yaml  p-ingress-another-ns.yaml  p-ingress.yaml  p-service.yaml
ckd-prep/roles/: cluster-role-binding.yaml  cluster-role.yaml  role-binding.yaml  role.yaml
commands/: README.md  mac.md
commands/aws/: iam.md  main.md  s3.md
commands/docker/: compose.md  container.md  docker.md  images.md  network.md  volume.md
database/: databricks.md  pg-commands.md  redis.md
eks/: notes.md
linux-training/: notes.md
project-setup/: python.md  react.md  ubuntu.md
project-setup/python/docker-fastapi-poetry/: Dockerfile  main.py  notes.md  pyproject.toml
tools/: README.md  mac.md
(+240 files in other folders)
